# rme-sysarch-acs

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  setup.sh
Docs/: Arm_RME_System_ACS_Bare_metal_platform_override_macro.rst  Arm_RME_System_ACS_Platform_porting_guide.rst  Arm_RME_System_Architecture_Compliance_Suite_Scenario_Document.rst  Arm_RME_System_Architecture_Compliance_Suite_Testcase_Checklist.rst
baremetal_app/: RmeAcs.h  RmeAcs.inf  RmeAcsCommon.c  RmeAcsMain.c
config/: startup.nsh
pal_el3/: acs_el3.c  acs_el3.h  pal_el3_print.h
pal_el3/include/: pal_el3.h  pal_el3_config.h  pal_el3_print.h
pal_el3/src/: pal_el3.c
platform/: pal_baremetal.mk
platform/pal_baremetal/: README.md  RmePalBaremetalLib.inf  pal_rme.cmake  run_time_params.rst
platform/pal_uefi/: RmePalLib.inf  RmePalNistLib.inf
prebuilt_images/: Parser.efi  Rme.efi  base-revc_config.ini  rdv3_config.ini
test_pool/: Makefile  test.cmake  test_pool.mk
test_pool/cda/: cda_rjzqcp_reset_transition.c  cda_rkrcwk_host_side_gpc.c
test_pool/cxl/: cxl_host_port_rmsd_write_protect.c  cxl_rbytyv_root_port_pas_behavior.c  cxl_rcnslj_type3_no_tsp.c  cxl_rdhwnr_link_stream_lock.c  cxl_rfdvzc_tdisp_disable.c  cxl_rgbgqx_ctc_link_ide.c  cxl_rgtvgz_tdisp_enable_link_gate.c  cxl_rgvrqc_host_port_coverage.c  cxl_rhcqws_host_side_mpe.c  cxl_rhhmvm_bisnp_pas_nonsecure.c  cxl_rhmxtf_host_hdm_decoder.c  cxl_rjsdvg_little_endian.c  cxl_rjxpzp_pas_ckid_mapping.c  cxl_rkjypb_cache_disable.c  cxl_rlqmcy_type3_host_mpe.c  cxl_rnycll_tdisp_disable_reject.c  cxl_rphcgc_rmsd_full_protect.c  cxl_rphwmm_rme_cda_tsp.c  cxl_rplcmc_type3_target_ckid.c  cxl_rplykv_rdfwkw_rme_cda_dvsec.c  cxl_rptggp_cmo_to_cxl_mem.c  cxl_rwpgjb_rmsd_write_protect_property.c  cxl_rwyvcq_link_unlock_reject.c  cxl_rxqhng_rid_range_reject.c  cxl_rxwjnn_type3_link_ide.c
test_pool/da/: da_attribute_rmeda_ctl_registers.c  da_autonomous_rootport_request_ns_pas.c  da_ctl_regs_rmsd_write_protect_property.c  da_dvsec_register_config.c  da_dvsec_register_config.h  da_ide_state_rootport_error.c  da_ide_state_tdisp_disable.c  da_ide_tbit_0_for_root_request.c  da_incoming_request_ide_non_sec_unlocked.c  da_incoming_request_ide_sec_locked.c  da_interconnect_regs_rmsd_protected.c  da_outgoing_realm_rqst_ide_tbit_1.c  da_outgoing_request_with_ide_tbit.c  da_p2p_btw_2_tdisp_devices.c  da_rmsd_write_detect_property.c  da_rmsd_write_detect_property.h  da_rootport_ide_features.c  da_rootport_tdisp_disabled.c  da_rootport_write_protect_full_protect_property.c  da_selective_ide_register_property.c  da_smmu_implementation.c  da_tee_io_capability.c  test_da001.c  test_da001_data.h  test_da002.c  test_da003.c  test_da004.c  test_da005.c  test_da006.c  test_da007.c  test_da008.c  test_da009.c  test_da010.c  test_da011.c  test_da012.c  test_da013.c  test_da014.c  test_da015.c  test_da015_data.h  test_da016.c  (+5 more)
test_pool/dpt/: dpt_p2p_different_rootport_invalid.c  dpt_p2p_different_rootport_valid.c  dpt_p2p_same_rootport_invalid.c  dpt_p2p_same_rootport_valid.c  dpt_system_resource_invalid.c  dpt_system_resource_valid_with_dpti.c  dpt_system_resource_valid_without_dpti.c  test_dpt001.c  test_dpt002.c  test_dpt003.c  test_dpt004.c  test_dpt005.c  test_dpt006.c  test_dpt007.c
test_pool/gic/: gic_its_subjected_to_gpc_check.c  test_g001.c
test_pool/legacy_system/: legacy_tz_en_drives_root_to_secure.c  legacy_tz_enable_after_reset.c  legacy_tz_enable_before_reset.c  legacy_tz_support_check.c  test_ls001.c  test_ls002.c  test_ls003.c  test_ls004.c
test_pool/mec/: mec_cmo_uses_correct_mecid.c  mec_effect_of_popa_cmo.c  mec_mecid_assosiation_and_encryption.c  mec_support_mecid_and_mecid_width.c  test_mec001.c  test_mec002.c  test_mec003.c  test_mec004.c
test_pool/rme/: rme_all_pe_has_feat_rng_or_rng_trap.c  rme_cmo_popa_for_cacheability_shareability.c  rme_coherent_interconnect_supports_cmo_popa.c  rme_data_encryption_beyond_popa.c  rme_data_encryption_with_different_tweak.c  rme_encryption_for_all_pas_except_ns.c  rme_gpc_for_system_resource.c  rme_gprs_scrubbed_after_reset.c  rme_interconnect_supports_tlbi_pa.c  rme_memory_associated_with_pas_till_popa.c  rme_msd_save_restore_mem_in_root_pas.c  rme_msd_smem_in_root_after_reset.c  rme_msd_smem_in_root_pas.c  rme_mte_region_in_root_pas.c  rme_ns_encryption_is_immutable.c  rme_pas_filter_functionality.c  rme_pas_filter_in_inactive_mode.c  rme_pcie_devices_support_gpc.c  rme_pe_context_after_exit_wfi.c  rme_pe_context_after_pe_suspend.c  rme_pe_do_not_have_arch_diff.c  rme_realm_smem_behaviour_after_reset.c  rme_realm_smem_in_realm_pas.c  rme_resources_aligned_to_granularity.c  rme_resources_are_not_physically_aliased.c  rme_rnvs_in_root_pas.c  rme_root_wdog_fails_in_non_root_state.c  rme_root_wdog_from_root_pas.c  rme_smmu_blocks_request_at_registers_reset.c  rme_snoop_filter_considers_pas.c  rme_support_in_pe.c  rme_system_reset_propagation_to_all_pe.c  test_rme001.c  test_rme002.c  test_rme003.c  test_rme004.c  test_rme005.c  test_rme006.c  test_rme007.c  test_rme008.c  (+24 more)
test_pool/smmu/: smmu_implements_rme.c  smmu_responds_to_gpt_tlb.c  test_i001.c  test_i002.c
test_pool/tdisp/: tdisp_rfmhst_set_interface_resp_format.c  tdisp_rfpymv_vdm_response_check.c  tdisp_rghdcb_get_dev_prop_resp_format.c  tdisp_rgrpdp_get_dev_prop_req.c  tdisp_rpxlfy_get_version_req.c  tdisp_rwfpxr_tdisp_error_allowed.c  tdisp_rwfwlf_get_version_resp_format.c  tdisp_rxdkdt_set_interface_req_semantics.c
tools/SysARCUI/: README.md
tools/scripts/: README.md  acsbuild.sh  acssetup.sh  acsstack.sh
uefi_app/: RmeAcs.h  RmeAcs.inf  RmeAcsMain.c  RmeAcsNist.inf
val/: Makefile  RmeValLib.inf  RmeValNistLib.inf  val.mk  val_rme.cmake
val/include/: acs_el3_param.h  mem_interface.h  pal_interface.h  platform_overrride_fvp.h  rme_acs_cfg.h  rme_acs_common.h  rme_acs_da.h  rme_acs_dma.h  rme_acs_dpt.h  rme_acs_el32.h  rme_acs_exerciser.h  rme_acs_gic.h  rme_acs_gic_support.h  val.h  (+48 more)
val_el3/: Makefile  README.md  SmcHandlerAck.c  ack_common.c  ack_include.h  configs.mk  pgt_common.c  plat_acs_smc_handler.c  smmuv3_el3.h  smmuv3_realm.c
(+219 files in other folders)
